# coderdojo-guide-generator

./: .env.app  CLAUDE.md  README.md  SESSION_SUMMARY.md  pyproject.toml
.claude/: mcp.json  settings.local.json
.claude/PRPs/system-reviews/: phase1-foundation-review.md  phase2-enhancement-pipeline-review.md
.github/workflows/: claude.yml
docs/: bug-report-upscayl-enhancement.md
resources/: print.css
src/: catalog.py  cli.py  downloader.py  enhancer.py  extractor.py  generator.py  makecode_capture.py  makecode_detector.py  makecode_replacer.py  printer.py  qrcode_processor.py  translator.py
src/core/: config.py
src/sources/: base.py  elecfreaks.py
tests/: test_cli.py  test_debug.py  test_elecfreaks.py  test_generator.py  test_makecode_detector.py  test_qrcode_processor.py
